--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @post, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :title %>
+  <%= f.input :title, required: false  %>
   <%= f.input :description %>
 
   <%= f.button :submit, :class => 'btn-primary' %>
